Add new dependencies to requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,19 @@ numpy
 plotly
 google-generativeai
 matplotlib
+requests
+beautifulsoup4
+html5lib
+lxml
+multitasking>=0.0.11
+frozendict>=2.3.0
+peewee>=3.16.0
+pytz>=2023.3
+python-dateutil>=2.8.2
+protobuf>=4.25.0,<6.0.0
+pytest>=7.4.0,<9.0.0
+pytest-cov>=4.1.0,<6.0.0
+pytest-mock>=3.12.0,<4.0.0
+ruff>=0.1.0
+mypy>=1.7.0
+pandas-stubs>=2.0.0
